@@ -1,12 +1,11 @@
 # -*- coding: utf-8 -*-
 
-import json
 import sys
 import xbmc
 
-try:
+try: #Py2
 	from urlparse import parse_qsl
-except:
+except ImportError: #Py3
 	from urllib.parse import parse_qsl
 
 
@@ -14,7 +13,6 @@ if __name__ == '__main__':
 	item = sys.listitem
 	# message = item.getLabel()
 	path = item.getPath()
-	# xbmc.log('path = %s' % path, 2)
 	plugin = 'plugin://plugin.video.venom/'
 	args = path.split(plugin, 1)
 	params = dict(parse_qsl(args[1].replace('?', '')))
