@@ -1,13 +1,13 @@
 # -*- coding: utf-8 -*-
 
-import json
+from json import loads as jsloads
 import sys
 import xbmc
 
-try:
+try: #Py2
 	from urlparse import parse_qsl
 	from urllib import quote_plus
-except:
+except ImportError: #Py3
 	from urllib.parse import parse_qsl, quote_plus
 
 
@@ -15,7 +15,6 @@ if __name__ == '__main__':
 	item = sys.listitem
 	# message = item.getLabel()
 	path = item.getPath()
-	# xbmc.log('path = %s' % path, 2)
 	plugin = 'plugin://plugin.video.venom/'
 	args = path.split(plugin, 1)
 	params = dict(parse_qsl(args[1].replace('?', '')))
@@ -23,7 +22,7 @@ if __name__ == '__main__':
 	year = params.get('year', '')
 
 	if 'meta' in params:
-		meta = json.loads(params['meta'])
+		meta = jsloads(params['meta'])
 		imdb = meta.get('imdb', '')
 		tmdb = meta.get('tmdb', '')
 		tvdb = meta.get('tvdb', '')
